[FEATURE] API: Name-Based Reference Tag Deletion
